# coconuts-mcp-server

./: .gitignore  README.md  pyproject.toml
data/: .gitkeep
docs/: README.md
examples/: example_usage.py
src/coconuts/: __init__.py  database.py  server.py
src/coconuts/data/: google_maps_places.db
