[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coconuts-mcp-server"
version = "0.1.0"
description = "MCP server for managing Google Maps saved places"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coconuts"]
